bluec-tests/tests/invalid/types_longdouble/complement_longdouble.c
int main(void) {
    /* You can't take the bitwise complement of a float */
    long double f = ~10.0L;
    return 0;
}